--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 
 <body>
+
+  <section class="wrapper">
+    <div class="countup container">
+      <div class="countup__title">
+        Full-Scale invasion of Ukraine
+      </div>
+      <div class="countup__subtext">
+        This is countup timer from the start of full scale invasion
+      </div>
+      <div class="countup" id="countup1">
+        <span class="timeel days">00</span>
+        <span class="timeel timeRefDays">days</span>
+        <span class="timeel hours">00</span>
+        <span class="timeel timeRefHours">hours</span>
+        <span class="timeel minutes">00</span>
+        <span class="timeel timeRefMinutes">minutes</span>
+        <span class="timeel seconds">00</span>
+        <span class="timeel timeRefSeconds">seconds</span>
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
