--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
       <div class="countup__subtext">
         This is countup timer from the start of full scale invasion
       </div>
-      <div class="countup" id="countup1">
-        <span class="timeel days">00</span>
-        <span class="timeel timeRefDays">days</span>
-        <span class="timeel hours">00</span>
-        <span class="timeel timeRefHours">hours</span>
-        <span class="timeel minutes">00</span>
-        <span class="timeel timeRefMinutes">minutes</span>
-        <span class="timeel seconds">00</span>
-        <span class="timeel timeRefSeconds">seconds</span>
+      <div class="countup-box" id="countup1">
+        <div class="countup-box__item">
+          <span class="timeel days">00</span>
+          <span class="timeel timeRefDays">days</span>
+        </div>
+        <div class="countup-box__item">
+          <span class="timeel hours">00</span>
+          <span class="timeel timeRefHours">hours</span>
+        </div>
+        <div class="countup-box__item">
+          <span class="timeel minutes">00</span>
+          <span class="timeel timeRefMinutes">minutes</span>
+        </div>
+        <div class="countup-box__item">
+          <span class="timeel seconds">00</span>
+          <span class="timeel timeRefSeconds">seconds</span>
+        </div>
       </div>
     </div>
   </section>
