feat: add fog animation

--- a/index.html
+++ b/index.html
@@ -4,35 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>War timer</title>
 </head>
 
 <body>
 
   <section class="wrapper">
-    <div class="countup container">
-      <div class="countup__title">
-        Full-Scale invasion of Ukraine
-      </div>
-      <div class="countup__subtext">
-        This is countup timer from the start of full scale invasion
-      </div>
-      <div class="countup-box" id="countup1">
-        <div class="countup-box__item">
-          <span class="timeel days">00</span>
-          <span class="timeel timeRefDays">days</span>
+    <div class="fog-container">
+      <div class="countup container">
+        <div class="countup__title">
+          Full-Scale invasion of Ukraine
         </div>
-        <div class="countup-box__item">
-          <span class="timeel hours">00</span>
-          <span class="timeel timeRefHours">hours</span>
+        <div class="countup__subtext">
+          This is countup timer from the start of full scale invasion
         </div>
-        <div class="countup-box__item">
-          <span class="timeel minutes">00</span>
-          <span class="timeel timeRefMinutes">minutes</span>
-        </div>
-        <div class="countup-box__item">
-          <span class="timeel seconds">00</span>
-          <span class="timeel timeRefSeconds">seconds</span>
+        <div class="countup-box" id="countup1">
+          <div class="countup-box__item">
+            <span class="timeel days">00</span>
+            <span class="timeel timeRefDays">days</span>
+          </div>
+          <div class="countup-box__item">
+            <span class="timeel hours">00</span>
+            <span class="timeel timeRefHours">hours</span>
+          </div>
+          <div class="countup-box__item">
+            <span class="timeel minutes">00</span>
+            <span class="timeel timeRefMinutes">minutes</span>
+          </div>
+          <div class="countup-box__item">
+            <span class="timeel seconds">00</span>
+            <span class="timeel timeRefSeconds">seconds</span>
+          </div>
         </div>
       </div>
     </div>
